Tue Sep 02 00:03:39 2003 GMT  Holger Bochnig <hbgg@gmx.net>

	* gtkgame.c (SetAnnotation), gtkcube.c (CreateCubeAnalysis):
	  tidy up GUI double/take annotation

Mon Sep 01 23:29:12 2003 GMT  Holger Bochnig <hbgg@gmx.net>

	* gtkgame.c (SetAnnotation): swap doubling skill and luck widgets

Mon Sep 01 22:55:25 2003 GMT  Holger Bochnig <hbgg@gmx.net>

	first version of better logic for categorization of doubles
	(needs tweaking for correct doubling window)

	* analysis.c (updateStatcontext): alter logic
	* analysis.c (getMarketWindowDividerMWC): new function 

Mon Sep  1 19:28:48 2003  Joern Thyssen  <jth@gnubg.org>

	* import.c (ParseOldmove): do not subtract 1 from move
	before calling CanonicalMoveOrder. 
	(bug #5016 reported by Alix Martin)

Mon Sep  1 10:16:46 2003  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkprefs.c (bug 4875) Simplified saving new board designs
	* small 3d board fixes and some default designs (boards.xml)

Mon Sep  1 02:48:46 2003  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* gnubg.c (real_main): Fix typo.

Mon Sep  1 12:39:20 2003  Joseph Heled  <pepster@users.sourceforge.net>

	* gnubgmodule.c (PythonMatch): Add match statistics to gnubg.match().

Sun Aug 31 22:53:12 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>

	* gnubg.c conditionals around StartPythonHandleX/StopPythonHandleX
	  for all  environments, as it appears to be for a later python
	  version 

Sun Aug 31 22:53:12 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>

	* gnubg.c conditionals around StartPythonHandleX/StopPythonHandleX
	  for non GUI environments
	* play.c remove dead variable

Sun Aug 31 21:35:16 2003  Joern Thyssen  <jth@gnubg.org>

	* eval.c (DumpPosition): add position ID and match ID to
	the "eval" output.
	(suggested by Hugh Sconyers)

Sun Aug 31 16:13:02 2003 GMT  Holger Bochnig <hbgg@gmx.net>

	* gtkchequer.c (UpdateMoveList): didn't compile with USE_OLD_LAYOUT,
					 bring back move details

Sun Aug 31 15:13:40 2003  Joern Thyssen  <jth@gnubg.org>
