@@ -1,0 +1,20 @@
+/* XPM */
+static char * allgames_xpm[] = {
+"16 16 3 1",
+" 	c None",
+".	c #000000",
+"+	c #FF7F7F",
+"       ..       ",
+"      .++.      ",
+"     .++++.     ",
+"    .++++++.    ",
+"   .++++++++.   ",
+"  .++++++++++.  ",
+" .++++++++++++. ",
+" .++++++++++++. ",
+"  .++++++++++.  ",
+"   .++++++++.   ",
+"    .++++++.    ",
+"     .++++.     ",
+"      .++.      ",
+"       ..       "};
