@@ -864,6 +864,7 @@ extern void CommandAccept( char * ),
     CommandSetGUIShowIDs( char * ),
     CommandSetGUIShowPips( char * ),
     CommandSetGUIDragTargetHelp( char * ),
+    CommandSetGUIUseStatsPanel( char * ),
     CommandSetHighlight ( char * ),
     CommandSetHighlightColour ( char * ),
     CommandSetHighlightDark ( char * ),
