@@ -53,7 +53,8 @@ typedef enum _animation {
 extern animation animGUI;
 extern int nGUIAnimSpeed, fGUIBeep, fGUIDiceArea, fGUIHighDieFirst,
     fGUIIllegal, fGUIShowIDs, fGUIShowGameInfo, fGUIShowPips, fGUISetWindowPos,
-    fGUIDragTargetHelp;
+    fGUIDragTargetHelp, fGUIUseStatsPanel;
+;
 
 typedef struct _Board {
     GtkVBox vbox;
