@@ -1,3 +1,7 @@
+Tue Sep 02 11:16:46 2003  Jon Kinsey <Jon_Kinsey@hotmail.com>
+
+	* gtkgame.c added option to switch between list/panels for statistics
+
 Tue Sep 02 00:03:39 2003 GMT  Holger Bochnig <hbgg@gmx.net>
 
 	* gtkgame.c (SetAnnotation), gtkcube.c (CreateCubeAnalysis):
